changed city limits shapefile

--- a/notebooks/4) Getting Land Use Data.ipynb
+++ b/notebooks/4) Getting Land Use Data.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acl = gpd.read_file(wd+'data/citylimits/citylimits.shp')\n",
+    "#acl = gpd.read_file(wd+'data/fulljurisdiction/austincitylimits.shp')\n",
     "#acl.crs = {'init': 'epsg:102739'}"
    ]
   },
@@ -69,7 +69,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>CITY OF AUSTIN</td>\n",
+       "      <td>AUSTIN FULL PURPOSE</td>\n",
+       "      <td>FULL</td>\n",
+       "      <td>FULL PURPOSE</td>\n",
+       "      <td>400630281.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>7.162866e+06</td>\n",
+       "      <td>1.302898e+04</td>\n",
+       "      <td>POLYGON ((3149772.649999953 10102980.41455244,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CITY OF AUSTIN</td>\n",
+       "      <td>AUSTIN FULL PURPOSE</td>\n",
+       "      <td>FULL</td>\n",
+       "      <td>FULL PURPOSE</td>\n",
+       "      <td>400455693.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>7.167226e+06</td>\n",
+       "      <td>1.219104e+04</td>\n",
+       "      <td>POLYGON ((3124422.400169658 10042070.34434179,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>CITY OF AUSTIN</td>\n",
        "      <td>AUSTIN FULL PURPOSE</td>\n",
        "      <td>FULL</td>\n",
@@ -81,19 +107,41 @@
        "      <td>2.049691e+06</td>\n",
        "      <td>POLYGON ((3086815.032605638 10026999.74263538,...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CITY OF AUSTIN</td>\n",
+       "      <td>AUSTIN FULL PURPOSE</td>\n",
+       "      <td>FULL</td>\n",
+       "      <td>FULL PURPOSE</td>\n",
+       "      <td>400455695.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>5.040355e+07</td>\n",
+       "      <td>6.169732e+04</td>\n",
+       "      <td>POLYGON ((3156266.481084739 10027546.71252559,...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        city_name           jurisdicti jurisdic_1    jurisdic_2  jurisdic_3  \\\n",
-       "0  CITY OF AUSTIN  AUSTIN FULL PURPOSE       FULL  FULL PURPOSE        34.0   \n",
+       "        city_name           jurisdicti jurisdic_1    jurisdic_2   jurisdic_3  \\\n",
+       "0  CITY OF AUSTIN  AUSTIN FULL PURPOSE       FULL  FULL PURPOSE  400630281.0   \n",
+       "1  CITY OF AUSTIN  AUSTIN FULL PURPOSE       FULL  FULL PURPOSE  400455693.0   \n",
+       "2  CITY OF AUSTIN  AUSTIN FULL PURPOSE       FULL  FULL PURPOSE         34.0   \n",
+       "3  CITY OF AUSTIN  AUSTIN FULL PURPOSE       FULL  FULL PURPOSE  400455695.0   \n",
        "\n",
        "   modified_f  objectid    shape_area    shape_leng  \\\n",
-       "0       210.0     110.0  7.752723e+09  2.049691e+06   \n",
+       "0       210.0     496.0  7.162866e+06  1.302898e+04   \n",
+       "1       210.0     261.0  7.167226e+06  1.219104e+04   \n",
+       "2       210.0     110.0  7.752723e+09  2.049691e+06   \n",
+       "3       210.0     167.0  5.040355e+07  6.169732e+04   \n",
        "\n",
        "                                            geometry  \n",
-       "0  POLYGON ((3086815.032605638 10026999.74263538,...  "
+       "0  POLYGON ((3149772.649999953 10102980.41455244,...  \n",
+       "1  POLYGON ((3124422.400169658 10042070.34434179,...  \n",
+       "2  POLYGON ((3086815.032605638 10026999.74263538,...  \n",
+       "3  POLYGON ((3156266.481084739 10027546.71252559,...  "
       ]
      },
      "execution_count": 3,
@@ -102,7 +150,7 @@
     }
    ],
    "source": [
-    "acl"
+    "#acl"
    ]
   },
   {
@@ -111,8 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#councilbound = gpd.read_file('https://data.austintexas.gov/api/geospatial/7sg9-qjmi?method=export&format=GeoJSON')\n",
-    "#councilbound['city'] = 'Austin'"
+    "citybound = gpd.read_file('https://data.austintexas.gov/api/geospatial/3pzb-6mbr?method=export&format=GeoJSON')\n",
+    "#citybound['city'] = 'Austin'"
    ]
   },
   {
@@ -121,12 +169,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#councilbound"
+    "citybound"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +233,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>100008</td>\n",
        "      <td>300</td>\n",
        "      <td>1600885</td>\n",
@@ -209,7 +257,7 @@
        "      <td>(POLYGON ((-97.76175004493517 30.2546831022578...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>100012</td>\n",
        "      <td>330</td>\n",
        "      <td>1518342</td>\n",
@@ -233,7 +281,7 @@
        "      <td>(POLYGON ((-97.76143821594194 30.2535324981955...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>100013</td>\n",
        "      <td>300</td>\n",
        "      <td>1459227</td>\n",
@@ -257,7 +305,7 @@
        "      <td>(POLYGON ((-97.76159723143827 30.2532570839506...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>100014</td>\n",
        "      <td>300</td>\n",
        "      <td>1709771</td>\n",
@@ -281,7 +329,7 @@
        "      <td>(POLYGON ((-97.76143821594194 30.2535324981955...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>100015</td>\n",
        "      <td>300</td>\n",
        "      <td>100009</td>\n",
@@ -305,7 +353,7 @@
        "      <td>(POLYGON ((-97.76363068195398 30.2525234633448...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -329,7 +377,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>265415</td>\n",
+       "      <th>265415</th>\n",
        "      <td>0</td>\n",
        "      <td>100</td>\n",
        "      <td>0</td>\n",
@@ -353,7 +401,7 @@
        "      <td>(POLYGON ((-97.91355779135991 30.3832628195057...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>265416</td>\n",
+       "      <th>265416</th>\n",
        "      <td>0</td>\n",
        "      <td>100</td>\n",
        "      <td>0</td>\n",
@@ -377,7 +425,7 @@
        "      <td>(POLYGON ((-97.80415662412005 30.2487113286068...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>265417</td>\n",
+       "      <th>265417</th>\n",
        "      <td>0</td>\n",
        "      <td>800</td>\n",
        "      <td>0</td>\n",
@@ -401,7 +449,7 @@
        "      <td>(POLYGON ((-97.72112994156537 30.3887148565577...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>265418</td>\n",
+       "      <th>265418</th>\n",
        "      <td>0</td>\n",
        "      <td>900</td>\n",
        "      <td>0</td>\n",
@@ -425,7 +473,7 @@
        "      <td>(POLYGON ((-97.68942081529111 30.1108059129018...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>265419</td>\n",
+       "      <th>265419</th>\n",
        "      <td>0</td>\n",
        "      <td>100</td>\n",
        "      <td>0</td>\n",
@@ -535,7 +583,7 @@
        "[265420 rows x 64 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +643,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>100008</td>\n",
        "      <td>300</td>\n",
        "      <td>1600885</td>\n",
@@ -619,7 +667,7 @@
        "      <td>(POLYGON ((-97.76175004493517 30.2546831022578...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>100012</td>\n",
        "      <td>330</td>\n",
        "      <td>1518342</td>\n",
@@ -643,7 +691,7 @@
        "      <td>(POLYGON ((-97.76143821594194 30.2535324981955...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>100013</td>\n",
        "      <td>300</td>\n",
        "      <td>1459227</td>\n",
@@ -667,7 +715,7 @@
        "      <td>(POLYGON ((-97.76159723143827 30.2532570839506...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>100014</td>\n",
        "      <td>300</td>\n",
        "      <td>1709771</td>\n",
@@ -691,7 +739,7 @@
        "      <td>(POLYGON ((-97.76143821594194 30.2535324981955...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>100015</td>\n",
        "      <td>300</td>\n",
        "      <td>100009</td>\n",
@@ -758,20 +806,20 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#aus_landuse = gpd.overlay(landuse, council_districts.dissolve(by='city'), how='intersection')\n",
-    "#aus_landuse\n",
-    "landuse.head()"
+    "aus_landuse = gpd.overlay(landuse, council_districts.dissolve(by='city'), how='intersection')\n",
+    "aus_landuse\n",
+    "#landuse.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +828,7 @@
        "geopandas.geodataframe.GeoDataFrame"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -824,27 +872,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>imprv_hstd</th>\n",
+       "      <th>far</th>\n",
+       "      <th>jurisdic_2</th>\n",
+       "      <th>propval_yr</th>\n",
+       "      <th>shape_leng</th>\n",
+       "      <th>shape_area</th>\n",
        "      <th>situs</th>\n",
-       "      <th>imprv_type</th>\n",
-       "      <th>coa_taxabl</th>\n",
-       "      <th>deed_dt</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>jurisdic_1</th>\n",
-       "      <th>land_state</th>\n",
-       "      <th>condoid</th>\n",
-       "      <th>council_di</th>\n",
+       "      <th>basezone</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>ag_market</th>\n",
        "      <th>...</th>\n",
-       "      <th>total_imp</th>\n",
-       "      <th>prop_id</th>\n",
-       "      <th>sup_num</th>\n",
+       "      <th>imprv_tyde</th>\n",
+       "      <th>pid_10</th>\n",
+       "      <th>jurisdic_3</th>\n",
        "      <th>land_hstd</th>\n",
-       "      <th>market_val</th>\n",
-       "      <th>lu_desc</th>\n",
-       "      <th>hs_exempt</th>\n",
-       "      <th>i35_side</th>\n",
-       "      <th>hood_cd</th>\n",
-       "      <th>py_owner_i</th>\n",
+       "      <th>land_state</th>\n",
+       "      <th>prop_id</th>\n",
+       "      <th>tract_or_l</th>\n",
+       "      <th>sum_imprv</th>\n",
+       "      <th>ten_percen</th>\n",
+       "      <th>imprv_hstd</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -855,13 +903,13 @@
       ],
       "text/plain": [
        "Empty GeoDataFrame\n",
-       "Columns: [imprv_hstd, situs, imprv_type, coa_taxabl, deed_dt, geometry, jurisdic_1, land_state, condoid, council_di, depreciati, city_name, units, far, ov65_exemp, land_non_h, source, imprv_tyde, modified_f, legal_de_1, total_land, prop_type, notes, tract_or_l, legal_desc, gen_lu_des, assessed_v, gislink, basezone, pid_10, previouslu, imprv_non, yr_built, eff_zone, jurisdic_3, lotsize, jurisdic_2, dba, constraine, land_use, abs_subdv, owner, sum_imprv, objectid, block, land_acres, cnt_gislin, jurisdicti, ag_use_val, shape_leng, gen_land_u, shape_area, previousge, ag_market, appraised, imprv_stat, ten_percen, travis_tax, entities, ilr, propval_yr, total_imp, prop_id, sup_num, land_hstd, market_val, lu_desc, hs_exempt, i35_side, hood_cd, py_owner_i]\n",
+       "Columns: [far, jurisdic_2, propval_yr, shape_leng, shape_area, situs, basezone, city_name, yr_built, ag_market, sup_num, assessed_v, market_val, condoid, cnt_gislin, total_land, total_imp, jurisdicti, modified_f, land_non_h, objectid, py_owner_i, previouslu, coa_taxabl, ilr, i35_side, block, gislink, hood_cd, travis_tax, constraine, lu_desc, depreciati, council_di, ag_use_val, geometry, units, imprv_type, gen_land_u, prop_type, dba, appraised, deed_dt, land_acres, imprv_non, jurisdic_1, ov65_exemp, eff_zone, land_use, lotsize, source, imprv_stat, gen_lu_des, legal_de_1, previousge, notes, entities, abs_subdv, hs_exempt, legal_desc, owner, imprv_tyde, pid_10, jurisdic_3, land_hstd, land_state, prop_id, tract_or_l, sum_imprv, ten_percen, imprv_hstd]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 71 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
