--- a/notebooks/3) ParkServiceArea.ipynb
+++ b/notebooks/3) ParkServiceArea.ipynb
@@ -597,9 +597,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -611,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
