--- a/notebooks/4) Getting Land Use Data.ipynb
+++ b/notebooks/4) Getting Land Use Data.ipynb
@@ -16,12 +16,13 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "from ipyleaflet import Map, GeoData, basemaps, LayersControl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +197,7 @@
        "4  (POLYGON ((-97.7824456921 30.393095518776, -97...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
        "LTD                CITY OF AUSTIN  LIMITED PURPOSE PLANNING ZONING  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
        "FULL               CITY OF AUSTIN                FULL PURPOSE  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -482,9 +483,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-1e530ff8edcd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlanduse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://data.austintexas.gov/api/geospatial/nuca-fzpt?method=export&format=GeoJSON'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#landuse.crs = {'init': 'epsg:102739'}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/park_env/lib/python3.7/site-packages/geopandas/io/file.py\u001b[0m in \u001b[0;36mread_file\u001b[0;34m(filename, bbox, **kwargs)\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"schema\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"properties\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"geometry\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m             \u001b[0mgdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGeoDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf_filt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mgdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/park_env/lib/python3.7/site-packages/geopandas/geodataframe.py\u001b[0m in \u001b[0;36mfrom_features\u001b[0;34m(cls, features, crs, columns)\u001b[0m\n\u001b[1;32m    225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m         \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 227\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfeatures_lst\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    228\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"__geo_interface__\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m                 \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__geo_interface__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "landuse = gpd.read_file('https://data.austintexas.gov/api/geospatial/nuca-fzpt?method=export&format=GeoJSON')\n",
     "#landuse.crs = {'init': 'epsg:102739'}"
@@ -492,223 +507,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prop_id</th>\n",
-       "      <th>previousge</th>\n",
-       "      <th>py_owner_i</th>\n",
-       "      <th>source</th>\n",
-       "      <th>abs_subdv</th>\n",
-       "      <th>entities</th>\n",
-       "      <th>cnt_gislin</th>\n",
-       "      <th>shape_area</th>\n",
-       "      <th>basezone</th>\n",
-       "      <th>legal_desc</th>\n",
-       "      <th>...</th>\n",
-       "      <th>land_use</th>\n",
-       "      <th>ag_market</th>\n",
-       "      <th>yr_built</th>\n",
-       "      <th>appraised</th>\n",
-       "      <th>land_state</th>\n",
-       "      <th>coa_taxabl</th>\n",
-       "      <th>total_imp</th>\n",
-       "      <th>i35_side</th>\n",
-       "      <th>hood_cd</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100008</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1600885</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S13671</td>\n",
-       "      <td>0A, 01, 02, 03, 2J, 68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23512.0709392</td>\n",
-       "      <td>General Commercial Services (CS)</td>\n",
-       "      <td>LOT 1-4 TEMPLER LOTS</td>\n",
-       "      <td>...</td>\n",
-       "      <td>300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2211227</td>\n",
-       "      <td>F1</td>\n",
-       "      <td>2211227</td>\n",
-       "      <td>94787</td>\n",
-       "      <td>West</td>\n",
-       "      <td>32SCN</td>\n",
-       "      <td>(POLYGON ((-97.76175004493517 30.2546831022578...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100012</td>\n",
-       "      <td>330</td>\n",
-       "      <td>1518342</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S03168</td>\n",
-       "      <td>0A, 01, 02, 03, 2J, 68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102588.556403</td>\n",
-       "      <td>Multi-Family Residence Highest Density (MF-6)</td>\n",
-       "      <td>LOT 1A COMMERCIAL SQUARE RESUB &amp; LOTS 5-7 OF T...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>330</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>45149000</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>45149000</td>\n",
-       "      <td>35915282</td>\n",
-       "      <td>West</td>\n",
-       "      <td>08SC</td>\n",
-       "      <td>(POLYGON ((-97.76143821594194 30.2535324981955...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100013</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1459227</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S03167</td>\n",
-       "      <td>0A, 01, 02, 03, 2J, 68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>59990.6694214</td>\n",
-       "      <td>General Commercial Services (CS)</td>\n",
-       "      <td>LOT 3 COMMERCIAL SQUARE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1982</td>\n",
-       "      <td>4762744</td>\n",
-       "      <td>F1</td>\n",
-       "      <td>4762744</td>\n",
-       "      <td>68243</td>\n",
-       "      <td>West</td>\n",
-       "      <td>86SOU</td>\n",
-       "      <td>(POLYGON ((-97.76159723143827 30.2532570839506...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100014</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1709771</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S03168</td>\n",
-       "      <td>0A, 01, 02, 03, 2J, 68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>43786.6931204</td>\n",
-       "      <td>General Commercial Services (CS)</td>\n",
-       "      <td>LOT 2A COMMERCIAL SQUARE RESUB</td>\n",
-       "      <td>...</td>\n",
-       "      <td>300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>3181377</td>\n",
-       "      <td>F1</td>\n",
-       "      <td>3181377</td>\n",
-       "      <td>34644</td>\n",
-       "      <td>West</td>\n",
-       "      <td>83SOU</td>\n",
-       "      <td>(POLYGON ((-97.76143821594194 30.2535324981955...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100015</td>\n",
-       "      <td>300</td>\n",
-       "      <td>100009</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S08658</td>\n",
-       "      <td>0A, 01, 02, 03, 2J, 68</td>\n",
-       "      <td>2</td>\n",
-       "      <td>117564.546009</td>\n",
-       "      <td>General Commercial Services (CS)</td>\n",
-       "      <td>LOT 5 LESS 830 SQ FT MAUFRAIS SUBD THE LOT 2&amp;3...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>7051888</td>\n",
-       "      <td>C1</td>\n",
-       "      <td>6981888</td>\n",
-       "      <td>266938</td>\n",
-       "      <td>West</td>\n",
-       "      <td>43SCN</td>\n",
-       "      <td>(POLYGON ((-97.76363068195398 30.2525234633448...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 64 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  prop_id previousge py_owner_i source abs_subdv                entities  \\\n",
-       "0  100008        300    1600885   None    S13671  0A, 01, 02, 03, 2J, 68   \n",
-       "1  100012        330    1518342   None    S03168  0A, 01, 02, 03, 2J, 68   \n",
-       "2  100013        300    1459227   None    S03167  0A, 01, 02, 03, 2J, 68   \n",
-       "3  100014        300    1709771   None    S03168  0A, 01, 02, 03, 2J, 68   \n",
-       "4  100015        300     100009   None    S08658  0A, 01, 02, 03, 2J, 68   \n",
-       "\n",
-       "  cnt_gislin     shape_area                                       basezone  \\\n",
-       "0          1  23512.0709392               General Commercial Services (CS)   \n",
-       "1          1  102588.556403  Multi-Family Residence Highest Density (MF-6)   \n",
-       "2          1  59990.6694214               General Commercial Services (CS)   \n",
-       "3          1  43786.6931204               General Commercial Services (CS)   \n",
-       "4          2  117564.546009               General Commercial Services (CS)   \n",
-       "\n",
-       "                                          legal_desc  ... land_use ag_market  \\\n",
-       "0                               LOT 1-4 TEMPLER LOTS  ...      300         0   \n",
-       "1  LOT 1A COMMERCIAL SQUARE RESUB & LOTS 5-7 OF T...  ...      330         0   \n",
-       "2                            LOT 3 COMMERCIAL SQUARE  ...      300         0   \n",
-       "3                     LOT 2A COMMERCIAL SQUARE RESUB  ...      300         0   \n",
-       "4  LOT 5 LESS 830 SQ FT MAUFRAIS SUBD THE LOT 2&3...  ...      300         0   \n",
-       "\n",
-       "  yr_built appraised land_state coa_taxabl total_imp i35_side hood_cd  \\\n",
-       "0     2013   2211227         F1    2211227     94787     West   32SCN   \n",
-       "1     2013  45149000         B1   45149000  35915282     West    08SC   \n",
-       "2     1982   4762744         F1    4762744     68243     West   86SOU   \n",
-       "3     1983   3181377         F1    3181377     34644     West   83SOU   \n",
-       "4     2000   7051888         C1    6981888    266938     West   43SCN   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  (POLYGON ((-97.76175004493517 30.2546831022578...  \n",
-       "1  (POLYGON ((-97.76143821594194 30.2535324981955...  \n",
-       "2  (POLYGON ((-97.76159723143827 30.2532570839506...  \n",
-       "3  (POLYGON ((-97.76143821594194 30.2535324981955...  \n",
-       "4  (POLYGON ((-97.76363068195398 30.2525234633448...  \n",
-       "\n",
-       "[5 rows x 64 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "landuse.head()"
    ]
@@ -810,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +629,7 @@
     "\n",
     "#City of Austin Park Boundaries\n",
     "coaparks = gpd.read_file(wd+\"data/coaparks/BOUNDARIES_city_of_austin_parks.shp\")\n",
-    "coaparks.crs = {'init': 'epsg:102739'}\n",
+    "coaparks.crs = {'init': 'epsg:4326'}\n",
     "\n",
     "#Park Buffers\n",
     "quartbuf = gpd.read_file(wd+\"data/coaparks_buffer/quarterbuff.shp\")\n",
@@ -841,23 +642,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'race' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-09a3d6f561c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'race' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 3058090.29986697, 10020252.8763779 ,  3167828.50033763,\n",
+       "       10161094.72034982])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "race.head()"
+    "coaparks.total_bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79dd0d0efb80493fab966dc014d51d7e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(basemap={'url': 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 'max_zoom': 19, 'attribution': 'Map …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "m = Map(center=(30.2672, -97.7431), zoom=15)\n",
+    "geo_data_parks = GeoData(geo_dataframe=coaparks, style={'color': 'black', 'fillColor': '#3366cc', 'opacity':0.5, 'weight':1.9, 'dashArray':'2', 'fillOpacity':1},\n",
+    "                   hover_style={'fillColor': 'red' , 'fillOpacity': 1}, name = 'coaparks')\n",
+    "\n",
+    "#geo_data2 = GeoData(geo_dataframe=cbg, style={'color':'purple', 'opacity':.05},hover_style={'fillColor':'red', 'fillOpacity':.2}, name = 'coaPop')\n",
+    "\n",
+    "#m.add_layer(geo_data_parks)\n",
+    "#m.add_control(LayersControl())\n",
+    "#m\n",
+    "#m.add_layer(geo_data)\n",
+    "m.add_layer(geo_data_parks)\n",
+    "m.add_control(LayersControl())\n",
+    "\n",
+    "m\n"
    ]
   },
   {
@@ -873,6 +712,18 @@
    "display_name": "park_env",
    "language": "python",
    "name": "park_env"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
