--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c49f6e52469c4c7d9bc120270190b463",
+       "model_id": "3f1e6c444e164701b74f83892d296fe6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21,6 +21,9 @@
     }
    ],
    "source": [
+    "import geopandas as gpd\n",
+    "import os\n",
+    "import ipyleaflet as ipy\n",
     "from ipyleaflet import Map, Marker\n",
     "\n",
     "center = (30.2672, -97.7431)\n",
@@ -38,7 +41,68 @@
     "\n",
     "# You can also update the marker location from Python, that will update the\n",
     "# marker location on the Map:\n",
-    "marker.location = (30, 100)\n"
+    "marker.location = (30, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wd = os.getcwd()\n",
+    "wd = wd[:wd.find('notebooks')]\n",
+    "acl = gpd.read_file(wd+'data/fulljurisdiction/austincitylimits.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "geopandas.geodataframe.GeoDataFrame"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(acl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f1e6c444e164701b74f83892d296fe6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(basemap={'url': 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 'max_zoom': 19, 'attribution': 'Map …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "acl_layer = ipy.GeoData(geo_dataframe = acl,\n",
+    "                       style={'color': 'black', 'fillColor': '#3366cc', 'opacity':0.05, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},\n",
+    "                       hover_style={'fillColor': 'red' , 'fillOpacity': 0.2},\n",
+    "                       name = 'Austin City Limits')\n",
+    "m.add_layer(acl_layer)\n",
+    "m.add_control(ipy.LayersControl())\n",
+    "m"
    ]
   },
   {
@@ -51,9 +115,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -65,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
