--- a/notebooks/4) Getting Land Use Data.ipynb
+++ b/notebooks/4) Getting Land Use Data.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,13 +663,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79dd0d0efb80493fab966dc014d51d7e",
+       "model_id": "8732d8a271164c6b8aa204dcaf339460",
        "version_major": 2,
        "version_minor": 0
       },
@@ -709,9 +709,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -723,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
