created geojson files

--- a/notebooks/Leaflet Test.ipynb
+++ b/notebooks/Leaflet Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#landuse = gpd.read_file(wd+\\\"data//\")\n",
-    "acl = gpd.read_file(wd+\"data/fulljurisdiction/austincitylimits.shp\")\n",
-    "acl.to_file(\"acl2.geojson\", driver='GeoJSON')\n",
-    "acl2 = gpd.read_file(\"acl2.geojson\")\n",
-    "acl2.crs = {'init': 'epsg:4326'}\n",
+    "acl = gpd.read_file(wd+\"data/fulljurisdiction/austincitylimitsgj.geojson\")\n",
     "\n",
     "cbg = gpd.read_file(wd+\"data/censusblockgroups/cbg.shp\")\n",
     "pop = pd.read_excel(wd+\"data/censustables/ACS_17_5yr_totalpop_allcounties.xlsx\")\n",
@@ -50,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a48ac17248474ef39d01c2b6bb5b0181",
+       "model_id": "d90bf83d1b3e4f118a8fa72e0e7d1e5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +75,7 @@
     }
    ],
    "source": [
-    "acl_data = ipy.GeoData(geo_dataframe = acl2,\n",
+    "acl_data = ipy.GeoData(geo_dataframe = acl,\n",
     "                       style={'color': 'purple', 'opacity':1, 'weight':5, 'dashArray':'2', 'fillOpacity':0.6},\n",
     "                       hover_style={'fillColor': 'red' , 'fillOpacity': 0.2},\n",
     "                       name = 'Austin City Limits')\n",
