--- a/notebooks/2) CensusFileMerge.ipynb
+++ b/notebooks/2) CensusFileMerge.ipynb
@@ -228,7 +228,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -930,7 +930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creation of the Census Block Group shapefile with population count data included "
+    "## Creation of the Census Block Group shapefile with population count data included "
    ]
   },
   {
@@ -1295,7 +1295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
