created geojson files

--- a/notebooks/Leaflet Test.ipynb
+++ b/notebooks/Leaflet Test.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>CITY OF AUSTIN</td>\n",
        "      <td>AUSTIN FULL PURPOSE</td>\n",
        "      <td>FULL</td>\n",
@@ -98,7 +98,7 @@
        "      <td>(POLYGON ((-97.6280281276115 30.35433236263618...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>CITY OF AUSTIN</td>\n",
        "      <td>AUSTIN FULL PURPOSE</td>\n",
        "      <td>FULL</td>\n",
@@ -111,7 +111,7 @@
        "      <td>(POLYGON ((-97.71292748043328 30.1885706379028...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>CITY OF AUSTIN</td>\n",
        "      <td>AUSTIN FULL PURPOSE</td>\n",
        "      <td>FULL</td>\n",
@@ -124,7 +124,7 @@
        "      <td>(POLYGON ((-97.83299919290266 30.1495236668398...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>CITY OF AUSTIN</td>\n",
        "      <td>AUSTIN FULL PURPOSE</td>\n",
        "      <td>FULL</td>\n",
@@ -160,7 +160,7 @@
        "3  (POLYGON ((-97.61329293634175 30.1465468341990...  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ff0c392117c41d3a7b8d1e04a255cfa",
+       "model_id": "b8285930a5c54951949085d6c23e1ed4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f2cd26219f947f4b17e8253471ad310",
+       "model_id": "f11b07f880ec489eaed82ac39a351c89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
       " |  \n",
       " |  widget_types = <ipywidgets.widgets.widget.WidgetRegistry object>\n",
       " |  \n",
-      " |  widgets = {'01021766282d4f97920e6832bce3c38f': DescriptionStyle(), '02...\n",
+      " |  widgets = {'13dffe9c71b14a9fbb03bb7bd3e7c809': TileLayer(attribution='...\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from ipywidgets.widgets.widget.LoggingHasTraits:\n",
@@ -855,9 +855,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -869,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
