--- a/notebooks/4) Getting Land Use Data.ipynb
+++ b/notebooks/4) Getting Land Use Data.ipynb
@@ -599,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#acllu.to_file(\"C:/Users/Victoria/Desktop/acl_landuse2016.shp\")"
+    "#acllu.to_file(\"C:/Users/Victoria/Desktop/acllanduse2016/acl_landuse2016.shp\")"
    ]
   },
   {
@@ -709,9 +709,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -723,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
